# AppGestionProfileDev

./: Cargo.toml
controllers/: Cargo.toml
controllers/src/: lib.rs
controllers_test/: Cargo.toml
controllers_test/src/: admin.rs
domain_test/: Cargo.toml
domain_test/src/: lib.rs
domains/: Cargo.toml
domains/src/: lib.rs  transaction.rs
entities/src/: lib.rs
infra/: Cargo.toml  Rocket.toml
infra/src/: main.rs  message.rs  session.rs
infra/src/api/: create_admin.rs  mod.rs
interactors/: Cargo.toml
interactors/src/: admin.rs  lib.rs  profile.rs  project.rs  resume.rs  skill.rs
interactors/src/boundaries/: admin.rs  mod.rs  profile.rs  project.rs  resume.rs  skill.rs
persistence/: Cargo.toml
persistence/src/: admin_transaction_persistence.rs  data_persistence.rs  lib.rs  profile_transaction_persistence.rs  project_transaction_persistence.rs  resume_transaction_persistence.rs  skill_transaction_persistence.rs
repositories/: Cargo.toml
repositories/src/: admin_transaction_repository.rs  lib.rs  project_transaction_repository.rs  resume_transaction_repository.rs  skill_transaction_repository.rs
src/: main.rs
src/DB/: mod.rs
src/admin/: mod.rs
src/admin_transaction_persistence/: mod.rs
src/admin_transaction_repository/: mod.rs
src/create_admin/: mod.rs
src/data_persistence/: mod.rs
src/delete_admin/: mod.rs
src/profile/: mod.rs
src/profile_transaction_persistence/: mod.rs
src/profile_transaction_repository/: mod.rs
src/resume/: mod.rs
src/skill/: mod.rs
templates/: login.html.hbs  message.html.hbs  session.html.hbs
(+106 files in other folders)
