[package]
name = "controllers_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
json = "*"
domains = { path = "../domains" }
entities = { path = "../entities" }
controllers = { path = "../controllers" } 
persistence = { path = "../persistence" }