[package]
name = "infra"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "=0.5.0-rc.3", features = ["secrets"] }
rocket_dyn_templates = { version = "=0.1.0-rc.3", features = ["handlebars", "tera"] }
domains = { path = "../domains" }
persistence = { path = "../persistence" }